Enhanced OCI registry support with digest verification and push (Issue #5) (#61)
* Enhanced OCI registry support with digest verification and push

- Add digest verification in pullOci(): after downloading a blob,
  verify its SHA-256 matches the manifest digest; throws IOException
  on mismatch, preventing corrupted/tampered charts from being used
- Handle OCI image index (manifest list): if a registry returns a
  multi-platform index instead of a single manifest, resolve to a
  platform-agnostic or linux/amd64 manifest automatically
- Add pushOci(): upload a chart .tgz to an OCI registry using the
  OCI Distribution Spec (blob existence check → POST/PUT upload →
  manifest push); uses Helm chart media types for full compatibility
- Add PullCommand: jhelm pull repo/chart --version x or oci://...
- Add PushCommand: jhelm push chart.tgz oci://registry/repo/chart:tag
- Register both commands in JHelmCommand subcommands list
- New package-private helpers for testability: computeBytesSha256,
  verifyBlobDigest, isManifestIndex, resolveDigestFromIndex
- 8 new unit tests in RepoManagerTest, 7 new tests in command tests

Closes #5

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Fix coverage and deprecation warnings in feature/5-enhanced-oci-registry

- Replace deprecated JsonNode.asText() with asString() in RepoManager.java
  and KpsComparisonTest.java (Jackson 3 migration)
- Fix deprecated URL(String) with URI.create().toURL() in KpsComparisonTest
- Add test constructor RepoManager(String configPath) for unit testing
- Add setHttpClientForTest() for injecting mock HTTP clients
- Make parseOciUrl/resolveChartUrl/lookupChartInIndex package-private
- Add 21 new tests covering: config file ops, OCI URL parsing, chart index
  lookup, HTTP-mocked updateRepo/pullFromUrl/pullOci/pushOci, untar, close
- Coverage: 58.62% → 77.83% (passes 75% JaCoCo threshold)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Add test-data-first coding standard and minimal 